--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is Allen Vork."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>张若凡（Allen Vork）</strong>，一坨Android程序猿，现在深圳工作。</p>
 
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
 
@@ -107,11 +107,11 @@ header-img: "img/post-bg-rwd.jpg"
 <div id="gitalk-container"></div>
     <script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '{{site.gitalk.clientID}}',
-    clientSecret: '{{site.gitalk.clientSecret}}',
-    repo: '{{site.gitalk.repo}}',
-    owner: '{{site.gitalk.owner}}',
-    admin: ['{{site.gitalk.admin}}'],
+    clientID: '6c0728bcdf6cb5465944',
+    clientSecret: '0291eca122bd392def0fca8f29fed181e00f7e77',
+    repo: 'allenvork.github.io',
+    owner: 'allenvork',
+    admin: ['allenvork'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
     id: 'about',
     });
